Fixed typos and cleanup.

--- a/src/Error/Debug/dumpHeader.html
+++ b/src/Error/Debug/dumpHeader.html
@@ -167,7 +167,7 @@
                 }
 
                 // Don't show toggles for empty arrays/objects
-                if (node.childNodes.length == 0) {
+                if (node.childNodes.length === 0) {
                     return;
                 }
 
